<resources>
    <string name="app_name">BookAround</string>
    <string name="title_activity_maps">Map</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="swicth">Notificaciones</string>
    <string name="BotonAgregarRecordatorio">Agregar recordatorio</string>
    <string name="turn_on_gps">Turn on Gps</string>
    <string name="BuscarPorBiblio">Bibliotecas</string>
    <string name="BuscarPorPapelerias">Papelerias</string>
    <string name="MAPAtext">PULSE EL MAPA PARA VER BIBLIOTECAS EN CUCUTA</string>
    <string name="imagenDelMapa">TODO</string>
    <string name="ImagenSplash">TODO</string>
    <string name="LogoLogin">TODO</string>
    <string name="LoginPass">Password</string>
    <string name="LoginBoton">¡PULSA AQUI PARA ENTRAR!</string>
    <string name="RegisterBoton">¡REGISTRATE!</string>
    <string name="LoginEmail">Email</string>
    <string name="GoogleLogin">TODO</string>
    <string name="FacebookLogin">TODO</string>
    <string name="MapaMaps">TODO</string>
    <string name="Recordatorio1">Domingo,sept. 24, 2020</string>
    <string name="Recordatorio2">Sabado, sept. 30, 2020</string>
    <string name="Recordatorio3">Lunes, sept. 15, 2019</string>
    <string name="botonNavBiblioteca"><![CDATA[<--Bibliotecas]]></string>
    <string name="botonNavRes"><![CDATA[Reseñas-->]]></string>
    <string name="todo">TODO</string>
    <string name="botonNavRecordatorio"><![CDATA[Recordatorios-->]]></string>
    <string name="BotonNavReseñas1"><![CDATA[Reseñas-->]]></string>
    <string name="BotonSalidaMain">TODO</string>
    <string name="botonNavRecordatorio3"><![CDATA[<--Recordatorios]]></string>
    <string name="BotonNavBiblioteca3"><![CDATA[<--Bibliotecas]]></string>
    <string name="Botonrecordatorios12">TODO</string>
    <string name="botonrecordatorionav5">TODO</string>
    <string name="buscadorresena">reseña 3</string>
    <string name="resena2">reseña 3</string>
    <string name="buscadorderesena">Que desea buscar</string>
    <string name="agregar_resena">Agregar reseña</string>
    <string name="resena22">resena2</string>
    <string name="seleccione_una_fecha">¡SELECCIONE UNA FECHA!</string>
    <string name="biblioteca">BIBLIOTECA:</string>
    <string name="name" />
    <string name="libro">LIBRO:</string>
    <string name="boton">Name</string>
    <string name="seleccione_una_hora">¡SELECCIONE UNA HORA!</string>
    <string name="BTNRELOG" />
    <string name="BTNFECHA" />
    <string name="guardar">GUARDAR</string>
</resources>