<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8C9EFF"
    android:backgroundTint="#8C9EFF"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:background="@drawable/boton_redondeado"
        android:backgroundTint="#E64A19"
        android:onClick="Recordatorios"
        android:text="@string/botonNavRecordatorio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <Button
        android:id="@+id/button7"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:background="@drawable/boton_redondeado"
        android:backgroundTint="#E64A19"
        android:onClick="Resenas"
        android:text="@string/BotonNavReseñas1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <Button
        android:id="@+id/button6"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:background="@drawable/boton_redondeado"
        android:backgroundTint="#E64A19"
        android:onClick="agregarrecordatorio"
        android:text="AGREGAR RECORDATORIO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774" />

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:background="@drawable/boton_redondeado"
        android:backgroundTint="#E64A19"
        android:onClick="agergarreseñas"
        android:text="AGREGAR RESEÑAS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MAPAtext"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/boton_redondeado"
        android:contentDescription="@string/MapaMaps"
        android:onClick="Siguiente"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293"
        app:srcCompat="@drawable/mapa" />

    <TextView
        android:id="@+id/textUser"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#E64A19"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

</androidx.constraintlayout.widget.ConstraintLayout>